# gsoup

./: .gitignore  .polyscope.ini  .pypirc_example  MANIFEST.in  README.md  blender_script.py  imgui.ini  pyproject.toml  sandbox.py  setup.py
.github/workflows/: publish.yml  test.yml
src/blender_projector/: procam.py
src/examples/: benchmark_tracking.py  calibrate.py  geometric_calibration.py  kalman_filter.py  photometric_calibration.py  track_aruco.py
src/gsoup/: __init__.py  core.py  dynamic.py  geometry_advanced.py  geometry_basic.py  gsoup_io.py  image.py  io.py  procam.py  projector_plugin_mitsuba.py  qslim.py  rasterize.py  sphere_trace.py  structures.py  track.py  transforms.py  video.py  viewer.py  viewer_drivers.py
tests/: test_basic.py  test_pattern_decoding.py  test_procam.py  test_video.py
tests/tests_resource/: blender_script.py  normal0001.exr  projector.xml  splat.ply
tests/tests_resource/aruco_track/: cameras.json
